--- a/app/sass/pages/_detail_atraksi.scss
+++ b/app/sass/pages/_detail_atraksi.scss
@@ -315,6 +315,7 @@
 .detail-gallery{
   width: 100%;
   max-width: 680px;
+  overflow: hidden;
   .swiper-container{
     width: 100%;
   }
